--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -5,7 +5,7 @@
       - openjdk-11-jdk-headless
       - git
       - gitweb
-      - python-mysqldb
+      - python3-mysqldb
     state: latest
     update_cache: true
 
