Add ssl support

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,10 @@
 - include: configure_gitweb.yml
   when: gerrit_gitweb_integration is defined and gerrit_gitweb_integration
 
+- include: configure_ssl.yml
+  when: gerrit_enable_ssl is defined and gerrit_enable_ssl
+
+
 - include: install_gerrit.yml
 
 - include: gerrit_replication.yml
