--- a/tasks/configure_gitweb.yml
+++ b/tasks/configure_gitweb.yml
@@ -6,7 +6,7 @@
   notify: restart apache2
   with_items:
     - cgid
-    - proxy_http_module
+    - proxy_http
 
 - name: configure_gitweb | configuring gitweb
   template:
