--- a/tasks/install_gerrit.yml
+++ b/tasks/install_gerrit.yml
@@ -81,14 +81,14 @@
     mode: 0644
   notify: restart gerrit
 
-- name: install_gerrit | configuring gerrit secure settings
-  template:
-    src: secure.config.j2
-    dest: "{{ gerrit_site_dir }}/etc/secure.config"
-    owner: "{{ gerrit_account_info.name }}"
-    group: "{{ gerrit_account_info.group }}"
-    mode: 0600
-  notify: restart gerrit
+#- name: install_gerrit | configuring gerrit secure settings
+#  template:
+#    src: secure.config.j2
+#    dest: "{{ gerrit_site_dir }}/etc/secure.config"
+#    owner: "{{ gerrit_account_info.name }}"
+#    group: "{{ gerrit_account_info.group }}"
+#    mode: 0600
+#  notify: restart gerrit
 
 - name: install_gerrit | initializing gerrit
   become: yes
